charts/Infrastructure/authentik/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.cameran-lai.com`)
      services:
        - name: authentik-server
          port: 443
  tls:
    secretName: auth-cert
